fix button spacing

--- a/index.css
+++ b/index.css
@@ -66,6 +66,7 @@ button {
 	font-weight: 500;
 	width: 500px;	
 	height: 50px;
+	margin: 10px;
 
 }
 ul {
@@ -125,7 +126,7 @@ ul {
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
 }
 .text-orange {
